--- a/package.json
+++ b/package.json
@@ -24,12 +24,19 @@
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  "engines": {
+    "node": "16.13.1" , 
+    "npm" : "8.3.0" 
+  },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
