--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "start": "node app",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cy:run": "cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -52,7 +53,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.2",
     "@testing-library/react": "^12.1.2",
+    "cypress": "^9.4.1",
     "jest": "^27.4.7"
   }
 }
