--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "yarn": "^1.22.17"
   },
   "scripts": {
-    "start": "node app",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
